syntax = "proto3";

import "google/protobuf/empty.proto";
import "actor-grpc-service.proto";

option java_multiple_files = true;
option java_package = "com.lesniewicz.api";

message FilmRequest{
  string filmId = 1;
}

message FilmsResponse {
  repeated SingleFilmResponse languages = 1;
}

message SingleFilmResponse {
  int64 filmId = 1;
  string title = 2;
  string description = 3;
  int32 releaseYear = 4;
  int32 rentalDuration = 5;
  float rentalRate = 6;
  int32 length = 7;
  float replacementCost = 8;
  string rating = 9;
  string specialFeatures = 10;
  string lastUpdate = 11;
  string language = 12;
  ActorsResponse actors = 13;
}

service FilmGrpcService {
  rpc getFilm(FilmRequest) returns (SingleFilmResponse) {};
  rpc getFilms(google.protobuf.Empty) returns (FilmsResponse) {};
}